--- a/index.html
+++ b/index.html
@@ -9,9 +9,48 @@
     <title>My Books Library</title>
 </head>
 <body>
-    <h1>My Book Library</h1>
+    
+
+    <div class="center">
+
+        <h1>My Book Library</h1>
 
     <div id="notes-list"></div>
+
+    <div class="form-container">
+
+        <form id="book-form" style="">
+            <h3>Add a Book to Your Library!</h3>
+
+            <input id='input-title' type="text" name="title" value="" placeholder="Enter your Book Title..." class="input-text">
+            <br><br>
+            <input id='input-author' type="text" name="author" value="" placeholder="Enter Author..." class="input-text">
+            <br><br>
+
+            <input id='input-url' type="text" name="image" value="" placeholder="Enter a Book image URL..." class="input-text">
+            <br><br>
+            <textarea id='input-description' name="description" rows="4" cols="60" value=""
+                placeholder="Enter a Book description..."></textarea>
+            <br><br>
+            
+            <select id="genres" name="genres" class="custom-select">
+                <option value="1">Romance</option>
+                <option value="2">Mystery</option>
+                <option value="3">Horror</option>
+                <option value="4">Thriller</option>
+                <option value="5">Fiction</option>
+                <option value="6">Cooking</option>
+                <option value="7">Travel</option>
+                <option value="8">History</option>
+                <!-- <option value="9">Horror</option> -->
+            </select>
+            <br><br>
+
+            <input id='create-button' type="submit" name="submit" value="Add a New Book" class="submit btn btn-primary">
+        </form>
+
+    </div>
+</div>
     <script src="index.js"></script>
 </body>
 </html>
