added a constructor in book.js

--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
     <div id="books-list" class="flex-container"></div>
 </div>
     <script type="text/javascript" src="src/index.js"></script>
+    <script type="text/javascript" src="src/book.js"></script>
 </body>
 </html>
