--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">   
         <div class="row align-items-center">
             <div class="col-md-4"><h3><i class="fa fa-search" aria-hidden="true"></i> Search Your Current Books...</h3>
-            <p>Pick a Category and see what books you have</p>
+            <p>Enter a Title to See if You have it in Your Library</p>
             <!-- Search form -->
             <input class="form-control" type="text" placeholder="Search" aria-label="Search">
             </div>
